   element siblings from a current selection, with optional selectors.

 * Added Node.root() to get the topmost ancestor of a Node.

 * Allow the Jsoup.Connect thread to be interrupted when reading the input stream; helps when reading from a long stream
   of data that doesn't read timeout.
   <https://github.com/jhy/jsoup/pull/712>

 * In Jsoup.Connect, now detects if a header value is actually in UTF-8 vs the HTTP spec of ISO-8859, and converts
   the header value appropriately.

 * Bugfix: in Jsoup.Connect, URLs containing non-URL-safe characters were not encoded to URL safe correctly.
   <https://github.com/jhy/jsoup/issues/706>

 * Bugfix: a "SYSTEM" flag in doctype tags would be incorrectly removed.
   <https://github.com/jhy/jsoup/issues/408>

 * Bugfix: removing attributes from an Element with removeAttr() would cause a ConcurrentModificationException.

*** Release 1.10.1 [2016-Oct-23]
 * New feature: added the option to preserve case for tags and/or attributes, with ParseSettings. By default, the HTML
   parser will continue to normalize tag names and attribute names to lower case, and the XML parser will now preserve
   case, according to the relevant spec. The CSS selectors for tags and attributes remain case insensitive, per the CSS
   spec.

 * Improved support for extended HTML entities, including supplemental characters and multiple character references.
   Also reduced memory consumption of the entity tables.
   <https://github.com/jhy/jsoup/issues/602>
   <https://github.com/jhy/jsoup/issues/603>

 * Added support for *|E wildcard namespace selectors.
   <https://github.com/jhy/jsoup/pull/724>

 * Added support for setting multiple connection headers at once with Connection.headers(Map)
   <https://github.com/jhy/jsoup/pull/725>

 * Added support for setting/overriding the response character set in Connection.Response, for cases where the charset
   is not defined by the server, or is defined incorrectly.